2010-02-27
- Write support in GdiPlus image IO backend.
- Reorganized ImageIO, modified few things.

2010-02-15
- Added support for GdiPlus image IO.
- Added some MMX code.
- Scripts moved to ./Scripts directory.
- Added getSize() and setSize() virtuals to StreamDevice.
- Added Fog::Stream <-> IStream bridge.
- Improved SSE2_BLIT_ macros.
- Renamed Fog::RasterUtil to Fog::RasterEngine

2010-02-12
- Fixed compilation issues in Win32 and 32-bit Linux.
- Added all configure scripts to Scripts directory.
- Fixed Fog::Path memory problems (writing to non-allocated location in some cases).

2010-02-04
- Fixed SSSE3 blitter (OPERATOR_SRC_OVER).

2010-02-02
- Fixed some warnings.

2010-02-01
- Fixed issue 9 - sincosf() and sincos() are not availble under Mac OS X
  with GCC 4.2. GNU extension.

2010-01-24
- Added few SSSE3 alpha-blending functions (currently this is only used
  to experiment with new instructions).
- SSE2 SRC_OVER code for single pixel is now faster.
- Click events are now send only if user released button under the widget.
- Added X11 engine explicit initialization mode.
- Fixed some double-buffering stuff.
- Fixed Region::subtract(Region, Rect) method.

2010-01-21
- Refactorized SSE2 code, naming conventions and constants

2010-01-20
- Added rgb16_from_xrgb32 conversion using SSE2.
- Added rgb16_from_xrgb32 conversion using MMX.
- Fixed double to string conversion (both, String and ByteArray).

2010-01-19
- SRC and SRC_OVER operators were optimized in pure C backend.
- Fixed minor build issues (added INT_MIN, INT_MAX, ...).
- Fixed X11 backend when using different bit-depth than 32.
- Fixed PathUtil.cpp code.

2010-01-18
- Added operator characteristics, will be used later by raster paint engine.
- Refactorized and rewritten Fog::ByteUtil.
- Rasterizer, Scanline, DitherMatrix classes are not exported from now.
- Added _p suffix to header files that won't be installed (and can't be used by apps).