@@ -243,6 +243,19 @@ enum BMP_COLORSPACE_TYPE
 };
 
 // ============================================================================
+// [Fog::ImageIO::BmpProvider]
+// ============================================================================
+
+struct FOG_HIDDEN BmpProvider : public Provider
+{
+  BmpProvider();
+  virtual ~BmpProvider();
+
+  virtual uint32_t checkSignature(const void* mem, sysuint_t length) const;
+  virtual err_t createDevice(uint32_t deviceType, BaseDevice** device) const;
+};
+
+// ============================================================================
 // [Fog::ImageIO::BmpDecoderDevice]
 // ============================================================================
 
