@@ -30,15 +30,6 @@ namespace ImageIO {
 // [Fog::ImageIO::IcoProvider]
 // ============================================================================
 
-struct FOG_HIDDEN IcoProvider : public Provider
-{
-  IcoProvider();
-  virtual ~IcoProvider();
-
-  virtual uint32_t checkSignature(const void* mem, sysuint_t length) const;
-  virtual err_t createDevice(uint32_t deviceType, BaseDevice** device) const;
-};
-
 IcoProvider::IcoProvider()
 {
   // Name of ImageIO Provider.
