@@ -107,17 +107,6 @@ void JpegLibrary::close()
 // [Fog::ImageIO::JpegProvider]
 // ===========================================================================
 
-struct FOG_HIDDEN JpegProvider : public Provider
-{
-  JpegProvider();
-  virtual ~JpegProvider();
-
-  virtual uint32_t checkSignature(const void* mem, sysuint_t length) const;
-  virtual err_t createDevice(uint32_t deviceType, BaseDevice** device) const;
-
-  JpegLibrary _jpegLibrary;
-};
-
 JpegProvider::JpegProvider()
 {
   // Name of ImageIO Provider.
