@@ -28,15 +28,6 @@ namespace ImageIO {
 // [Fog::ImageIO::PcxProvider]
 // ============================================================================
 
-struct PcxProvider : public Provider
-{
-  PcxProvider();
-  virtual ~PcxProvider();
-
-  virtual uint32_t checkSignature(const void* mem, sysuint_t length) const;
-  virtual err_t createDevice(uint32_t deviceType, BaseDevice** device) const;
-};
-
 PcxProvider::PcxProvider()
 {
   // Name of ImageIO Provider.
